--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Widler Rislin's Portfolio</title>
   </head>
   <body>
-
+    <h1>Widler's Portfolio</h1>
+    <hr>
+    <p>Sample text, will change later</p>
   </body>
 </html>
