added portfolio pages

--- a/about.html
+++ b/about.html
@@ -13,11 +13,11 @@
           <a href="javascript:void(0)"
           class="dropbtn">Portfolio</a>
           <div class="dropdown-content">
-            <a href="#">C/C++</a>
-            <a href="#">C#</a>
-            <a href="#">Java</a>
-            <a href="#">SQL</a>
-            <a href="#">Software Engineering Assignments</a>
+            <a href="code/ccode.html">C/C++</a>
+            <a href="code/csharp.html">C#</a>
+            <a href="code/java.html">Java</a>
+            <a href="code/sql.html">SQL</a>
+            <a href="code/se.html">Software Engineering Assignments</a>
           </div>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
