Add more to pages

--- a/code/ccode.html
+++ b/code/ccode.html
@@ -24,6 +24,30 @@
       </ul>
     </header>
     <main>
+      <h1>C/C++ Coding Assignments</h1>
+      <hr>
+      <article
+        <p>Programming assignments from when I was a CS major at FSU 2009-2013 </p>
+      </article>
+
+      <h2><a href="https://github.com/wrislin1/FSU/tree/master/Mixed">Mixed Integer Class</a></h2>
+      <hr>
+      <article
+        <p>This program creates a Mixed number class.</p>
+      </article>
+
+      <h2><a href="https://github.com/wrislin1/FSU/tree/master/Taxi_Kernel_Program">Taxi Kernel Program</a></h2>
+      <hr>
+      <article
+        <p>This is a kernel program designed to run in a Unix environment which simulates a Taxi service. The taxi responds to calls for pickup and decides on the optimum order to pick up each rider.</p>
+      </article>
+
+      <h2><a href="https://github.com/wrislin1/FSU/tree/master/shell">Shell</a></h2>
+      <hr>
+      <article
+        <p>These programs simulate a shell in a Unix environment.</p>
+      </article>
+
 
     </main>
 
