--- a/code/csharp.html
+++ b/code/csharp.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../styles.css">
-    <title>Widler Rislin's Portfolio</title>
+    <title>C# Coding Assignments</title>
   </head>
   <body>
     <header>
@@ -24,6 +24,18 @@
       </ul>
     </header>
     <main>
+    <h1>C# Coding Assignments</h1>
+    <hr>
+    <article
+      <p>These programs are assignments completed for CEN4370C .NET Programming With C# </p>
+    </article>
+
+    <h2>C# Coding Assignments</h2>
+    <hr>
+    <article
+      <p>These programs are assignments completed for CEN4370C .NET Programming With C# </p>
+    </article>
+
 
     </main>
 
