--- a/code/se.html
+++ b/code/se.html
@@ -24,6 +24,27 @@
       </ul>
     </header>
     <main>
+      <h1>Coding Assignments</h1>
+      <hr>
+      <article
+        <p>Software Engineering ptojects completed at FSU 2012-2013</p>
+      </article>
+
+      <h2><a href="https://github.com/wrislin1/wrislin1.github.io/blob/master/pdf/WSRS.pdf">Wrestling Stats Tracker SRS</a></h2>
+      <article
+        <p>Software Engineering ptojects completed at FSU 2012-2013</p>
+      </article>
+
+      <h2><a href="https://github.com/wrislin1/wrislin1.github.io/blob/master/pdf/SRS.pdf">DND SRS</a></h2>
+      <article
+        <p>Software Engineering ptojects completed at FSU 2012-2013</p>
+      </article>
+
+      <h2><a href="https://github.com/wrislin1/FSU/tree/master/CEN4020%20Software%202%20Project">Scrum Records and Documents</a></h2>
+      <article
+        <p>Software Engineering ptojects completed at FSU 2012-2013</p>
+      </article>
+
 
     </main>
 
