--- a/code/sql.html
+++ b/code/sql.html
@@ -24,6 +24,12 @@
       </ul>
     </header>
     <main>
+      <h1>SQL Assignments</h1>
+      <hr>
+    <h2><a href="https://github.com/wrislin1/FSU/tree/master/COP4710">COP4710</a></h2>
+      <article
+        <p>This contains a project from the class COP 4710 Database Administartion in which I had to create a database, populate it with values, then perform certain queries.</p>
+      </article>
 
     </main>
 
