--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
           <a href="javascript:void(0)"
           class="dropbtn">Portfolio</a>
           <div class="dropdown-content">
-            <a href="code/ccode.html">C/C++</a>
-            <a href="code/csharp.html">C#</a>
-            <a href="code/java.html">Java</a>
-            <a href="code/sql.html">SQL</a>
-            <a href="code/se.html">Software Engineering Assignments</a>
+            <a href="ccode.html">C/C++</a>
+            <a href="java.html">Java</a>
+            <a href="sql.html">SQL</a>
+            <a href="se.html">Software Engineering Assignments</a>
           </div>
       </ul>
     </header>
