added back sql.html

--- a/sql.html
+++ b/sql.html
@@ -21,20 +21,11 @@
       </ul>
     </header>
     <main>
-      <h1>Java Coding Assignments</h1>
+      <h1>SQL Assignments</h1>
       <hr>
+    <h2><a href="https://github.com/wrislin1/FSU/tree/master/COP4710">COP4710</a></h2>
       <article
-        <p>These assignments were done for CEN4025 Software Development 2</p>
-      </article>
-
-      <h2><a href="https://github.com/wrislin1/FileTree">File Tree</a></h2>
-      <article
-        <p>This program reads in a directory as input from the user and stores it in a tree structure The tree is then displayed on both the console and a Treeview window with info about the folder.</p>
-      </article>
-
-      <h2><a href="https://github.com/wrislin1/ToDoList">To Do List</a></h2>
-      <article
-        <p>This programis a simple to do list which supports adding to the list, removing an item from the list and displaying the list. It stores its data in a Mysql database using Hibernate.</p>
+        <p>This contains a project from the class COP 4710 Database Administartion in which I had to create a database, populate it with values, then perform certain queries.</p>
       </article>
 
     </main>
