--- a/se.html
+++ b/se.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <ul>
-        <li><a href="../index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li class="dropdown">
           <a href="javascript:void(0)"
           class="dropbtn">Portfolio</a>
