--- a/index.html
+++ b/index.html
@@ -21,27 +21,9 @@
       </ul>
     </header>
       <div id ="mytext">
-        <p style="text-align:left;">Hello, My name is Widler Rislin, welcome to my portfolio. In here you will find coding and Software Engineering assignments I have
+        <p>Hello, My name is Widler Rislin, welcome to my portfolio. In here you will find coding and Software Engineering assignments I have
     completed during my time at Florida State University and Valencia College where I currently attend and am majoring in Computer Technology and Software Design. This page will be updated
     as I complete more assignments.</p>
-
-    <p>
-      <p>Please enter your name:</p>
-
-<input id="name">
-<button type="button" onclick="welcome()">Submit</button>
-<p id="text"></p>
-<p id="date"></p>
-<script>
-function welcome() {
-  var name,message;
-  name = document.getElementById("name").value;
-  message = "Welcome to my Website " + name;
-  document.getElementById("text").innerHTML = message;
-  document.getElementById("date").innerHTML = new Date();
-}
-</script>
-    </p>
   </div>
 
   </body>
