--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body id="page1">
 
     <header class="myheader">
-      <header>
+      <header class="myheader">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li class="dropdown">
