progress made on blackjack

--- a/blackjack.html
+++ b/blackjack.html
@@ -6,7 +6,22 @@
     <title></title>
   </head>
   <body>
+    <button type="button" name="button" onclick="startGame();">Start Game</button>
+    <table>
+      <tr id="dealer">
 
-    <script src="scripts.js"></script>
+      </tr>
+    </table>
+
+    <table>
+      <tr id="player">
+
+      </tr>
+    </table>
+
+    <button type="button" name="button" id="hit" onclick="playerTurn();">Hit</button>
+    <button type="button" name="button" id ="stand" onclick="dealerTurn();">Stand</button>
+
+    <script src="blackjack.js"></script>
   </body>
 </html>
