--- a/blackjack.html
+++ b/blackjack.html
@@ -21,6 +21,9 @@
 
     <button type="button" name="button" id="hit" onclick="playerTurn();">Hit</button>
     <button type="button" name="button" id ="stand" onclick="dealerTurn();">Stand</button>
+    <h2 id="playerScore"></h2>
+    <h2 id="dealerScore"></h2>
+    <h2 id="winner"></h2>
 
     <script src="blackjack.js"></script>
   </body>
