--- a/games.html
+++ b/games.html
@@ -10,7 +10,7 @@
 
     <h1>Tic Tac Toe</h1>
     <button type="button" name="button" onclick="startGame();">New Game</button>
-    <button type="button" name="button" onclick="endGame();">End Game</button>
+    <button type="button" name="button" onclick="info();">End Game</button>
     <table>
       <tr>
         <td class="cell" id ="one" onclick="tictactoe('one')"></td>
