--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body id="page1">
 
-    <header class="myheader">
+
       <header class="myheader">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -24,7 +24,6 @@
         </ul>
       </header>
 
-    </header>
 
       <div id ="mytext">
         <h1 id="head1">Widlers Rislin Portfolio</h1>
@@ -82,11 +81,32 @@ The data is stored in an Mysql database using hibernate.</p>
 <button class="sbutton" type="button" name="button" onclick="next(1);">Next</button>
 </div>
 
+<div id="tictactoe">
+  <h1>Tic Tac Toe</h1>
+  <button type="button" name="button" onclick="startGame();">New Game</button>
+  <button type="button" name="button" onclick="info();">End Game</button>
+  <table>
+    <tr>
+      <td class="cell" id ="one" onclick="tictactoe('one')"></td>
+      <td class="cell vert" id="two" onclick="tictactoe('two')"></td>
+      <td class="cell" id="three" onclick="tictactoe('three')"></td>
+    </tr>
+    <tr>
+      <td class="cell hori" id="four" onclick="tictactoe('four')"></td>
+      <td class="cell vert hori" id="five" onclick="tictactoe('five')"></td>
+      <td class="cell hori" id="six" onclick="tictactoe('six')"></td>
+    </tr>
+    <tr>
+      <td class="cell" id="seven" onclick="tictactoe('seven')"></td>
+      <td class="cell vert" id="eight" onclick="tictactoe('eight')"></td>
+      <td class="cell" id="nine" onclick="tictactoe('nine')"></td>
+    </tr>
+  </table>
+</div>
+
      </div>
 
-     <div id="console">
 
-     </div>
 
   </div>
 
