--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@ The data is stored in an Mysql database using hibernate.</p>
 
 <div id="tictactoe">
   <h1>Tic Tac Toe</h1>
-  <button type="button" name="button" onclick="startGame();">New Game</button>
-  <button type="button" name="button" onclick="info();">End Game</button>
+  <button type="button" name="button" onclick="newGame();">New Game</button>
   <table>
     <tr>
       <td class="cell" id ="one" onclick="tictactoe('one')"></td>
