--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
       <div id ="mytext">
-        <h1 id="head1">Widlers Rislin Portfolio</h1>
+        <h1 id="head1">Widler Rislin's Portfolio</h1>
         <button type="button" name="button" id="about" onclick="window.location.href = '#me';">About Me</button>
   </div>
   <div id="codes">
