--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <a href="#codes"
             class="dropbtn">Portfolio</a>
             <div class="dropdown-content">
-              <a href="#console">Console Apps</a>
-              <a href="#apps">Applications</a>
-              <a href="games.html">Misc Projects</a>
-              <a href="se.html">Software Engineering Assignments</a>
+              <a href="#apps">To Do List Web App</a>
+              <a href="#tictactoe">Tic Tac Toe</a>
+              <a href="#blackjack">Blackack</a>
+              <a href="#invader">Space Invaders Clone Demo</a>
             </div>
         </ul>
       </header>
@@ -103,7 +103,7 @@ The data is stored in an Mysql database using hibernate.</p>
   </table>
 </div>
 
-<div class="blackjack">
+<div id="blackjack">
   <h1>Blackack</h1>
   <button type="button" name="button" onclick="startGame();">Start Game</button>
   <table>
@@ -124,6 +124,13 @@ The data is stored in an Mysql database using hibernate.</p>
   <h2 id="dealerScore"></h2>
   <h2 id="winner"></h2>
 
+</div>
+
+<div id="invader">
+  <h1>Space Invader Clone Demo</h1>
+  <video  controls>
+    <source src="demo.mp4" type="video/mp4">
+  </video>
 </div>
 
      </div>
