--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@ The data is stored in an Mysql database using hibernate.</p>
 <button class="sbutton" type="button" name="button" onclick="next(1);">Next</button>
 </div>
 
+<div id="invader">
+  <h1>Space Invader Clone Demo</h1>
+  <video  controls>
+    <source src="demo.mp4" type="video/mp4">
+  </video>
+</div>
+
 <div id="tictactoe">
   <h1>Tic Tac Toe</h1>
   <button type="button" name="button" onclick="newGame();">New Game</button>
@@ -104,7 +111,7 @@ The data is stored in an Mysql database using hibernate.</p>
 </div>
 
 <div id="blackjack">
-  <h1>Blackack</h1>
+  <h1>Blackjack</h1>
   <button type="button" name="button" onclick="startGame();">Start Game</button>
   <table>
     <tr id="dealer">
@@ -126,12 +133,7 @@ The data is stored in an Mysql database using hibernate.</p>
 
 </div>
 
-<div id="invader">
-  <h1>Space Invader Clone Demo</h1>
-  <video  controls>
-    <source src="demo.mp4" type="video/mp4">
-  </video>
-</div>
+
 
      </div>
 
