--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
        <h1>Recent Projects</h1>
 
        <h2>ToDo List Web Application</h2>
-       <p id="list">To Do List Web Application
-This program is a Java to do list web application with an UI written using JSP and CSS,
-that supports adding an item, removing an item and displaying the to the do list.
-The data is stored in an Mysql database using hibernate.</p>
+       <p id="list">
+This  is a Java to do list web application with an UI written using JSP and CSS.
+The application supports adding an item, removing an item and displaying the to the do list.
+The data is stored in an Mysql database using Hibernate.</p>
 
 <div class="container">
 
@@ -79,6 +79,8 @@ The data is stored in an Mysql database using hibernate.</p>
 
 <div id="invader">
   <h1>Space Invader Clone Demo</h1>
+  <p>This a Space invaders like game I am working on, made using the Unity game engine. This demo video features an opening battle between the
+  Player character and invading Spaceships</p>
   <video  controls>
     <source src="demo.mp4" type="video/mp4">
   </video>
@@ -86,6 +88,8 @@ The data is stored in an Mysql database using hibernate.</p>
 
 <div id="tictactoe">
   <h1>Tic Tac Toe</h1>
+  <p>A Tic Tac Toe game written in JavaScript, where the player can
+  challenge the computer. Press New game to play</p>
   <button type="button" name="button" onclick="newGame();">New Game</button>
   <table>
     <tr>
@@ -108,7 +112,8 @@ The data is stored in an Mysql database using hibernate.</p>
 
 <div id="blackjack">
   <h1>Blackjack</h1>
-  <button type="button" name="button" onclick="startGame();">Start Game</button>
+  <p>A simple Blackjack game written in JavaScript, press new game to play</p>
+  <button type="button" name="button" onclick="startGame();">New Game</button>
   <table>
     <tr id="dealer">
 
