--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
        <h1>Recent Projects</h1>
 
        <h2>ToDo List Web Application</h2>
-       <p id="list">
+       <p class="desc">
 This  is a Java to do list web application with an UI written using JSP and CSS.
 The application supports adding an item, removing an item and displaying the to the do list.
 The data is stored in an Mysql database using Hibernate.</p>
@@ -74,7 +74,7 @@ The data is stored in an Mysql database using Hibernate.</p>
 
 <div id="invader">
   <h1>Space Invader Clone Demo</h1>
-  <p>This a Space invaders like game I am working on, made using the Unity game engine. This demo video features an opening battle between the
+  <p class="desc">This a Space invaders like game I am working on, made using the Unity game engine. This demo video features an opening battle between the
   Player character and invading Spaceships</p>
   <video  controls>
     <source src="demo.mp4" type="video/mp4">
@@ -83,7 +83,7 @@ The data is stored in an Mysql database using Hibernate.</p>
 
 <div id="tictactoe">
   <h1>Tic Tac Toe</h1>
-  <p>A Tic Tac Toe game written in JavaScript, where the player can
+  <p class="desc">A Tic Tac Toe game written in JavaScript, where the player can
   challenge the computer. Press New game to play</p>
   <button type="button" name="button" onclick="newGame();">New Game</button>
   <table>
@@ -107,7 +107,7 @@ The data is stored in an Mysql database using Hibernate.</p>
 
 <div id="blackjack">
   <h1>Blackjack</h1>
-  <p>A simple Blackjack game written in JavaScript, press new game to play</p>
+  <p class ="desc">A simple Blackjack game written in JavaScript, press new game to play</p>
   <button type="button" name="button" onclick="startGame();">New Game</button>
   <table>
     <tr id="dealer">
