--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@ The data is stored in an Mysql database using Hibernate.</p>
     used Database Management Systems such as Microsoft SQL Server and MySql.
   </p>
 
-  <button type="button" name="button" onclick="window.location.href = 'https://github.com/wrislin1';">GitHub</button>
-  <button type="button" name="button" onclick="window.location.href = 'https://www.linkedin.com/in/widler-rislin-753391173/';">LinkedIn</button>
+  <button type="button" name="button" onclick="window.location.href = 'https://github.com/wrislin1';">GitHub Repository</button>
+  <button type="button" name="button" onclick="window.location.href = 'https://www.linkedin.com/in/widler-rislin-753391173/';">LinkedIn Profile</button>
   </div>
       <script src="blackjack.js"></script>
     <script src="scripts.js"></script>
