--- a/index.html
+++ b/index.html
@@ -140,10 +140,11 @@ The data is stored in an Mysql database using Hibernate.</p>
   <div id="me">
     <h1> About Me</h1>
     <p id="info">
-    Hello, My name is Widler Rislin, I am currently a senior at Valencia College majoring in Computer Technology and Software Development,
-    I plan on graduating after the Summer 2020 term. During my time at college, I have learned to program in C, C++, C# and Java.
-    I have learned to design websites utilizing HTML, CSS, and JavaScript. I have learned database management using SQL and have
-    used Database Management Systems such as Microsoft SQL Server and MySql.
+    A soon to be Bachelor of Applied Science in Computing Technology and Software Development
+    graduate, seeking an internship or entry level position in Software or Web Development.
+    Experienced with object-oriented programming, testing and debugging utilizing different SDLC models
+    and am successful working in both team environments and independently. Am a fast learner and can master
+    Software development tools such as IDE’s and build automation software quickly. 
   </p>
 
   <button type="button" name="button" onclick="window.location.href = 'https://github.com/wrislin1';">GitHub Repository</button>
